# Investiq

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
.claude/: settings.local.json
apps/api/: .env.example  .gitignore  fix_keys.py  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_portfolio_schema.py  0003_finance_schema.py  0004_portfolio_analysis_models.py
apps/api/src/: config.py  database.py  main.py
apps/api/src/ai/: base.py  claude_provider.py  factory.py  gemini_provider.py  openai_provider.py  router.py
apps/api/src/analysis/: fixed_income.py  indicators.py  models.py  router.py  schemas.py  service.py
apps/api/src/auth/: dependencies.py  jwt.py  models.py  router.py  schemas.py  service.py
apps/api/src/finance/: models.py  router.py  schemas.py  service.py
apps/api/src/market_data/: base.py  brapi.py  cache.py  factory.py  yahoo.py
apps/api/src/portfolio/: calculations.py  models.py  router.py  schemas.py  service.py
apps/api/src/settings/: router.py  schemas.py  service.py
apps/api/src/shared/: audit.py  decimal_utils.py  encryption.py  exceptions.py  limiter.py
apps/api/src/workers/: alert_checker.py  fx_updater.py  price_refresh.py  scheduler.py
apps/api/tests/unit/: test_decimal_utils.py  test_portfolio_service.py
apps/web/: next.config.mjs  next.config.ts  package.json
docs/plans/: 2026-03-08-frontend-dashboards-design.md  2026-03-08-frontend-dashboards.md  2026-03-15-platform-interactive-design.md
infrastructure/: README.md  docker-compose.yml
(+89 files in other folders)
